--- a/template/home.html
+++ b/template/home.html
@@ -87,8 +87,11 @@
       <li>To help people avoid paying huge  amount to the doctors unnecessarily</li>
       <li>To extend the role of the technology in the medical field</li>
     </ul>
-    <h2>Creator :</h2>
-    <p>Shobhit Srivastava</p>
+    <p><b>Developer's Details</b></p>
+    <p>Name: Eish Kumar<br>
+    Email Id : eishkumar11@gmail.com</p>
+    <p>Name: Shobhit Srivastava<br>
+      Email Id : shobhitsrivastava18th@gmail.com</p>
 
 
   </div>
